--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=jvlH9wVEFj5PqP2fyM03lW5b&t=20140109092002"></script>
   </head>
   <body>
     <div id="app"></div>
