--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
   #app {
     height: 100%;
   }
+
+  .BMap_cpyCtrl {
+    display: none;
+  }
+
+  .anchorBL {
+    display: none;
+  }
+
+  html {
+
+    /*滚动条宽高 */
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    /* 滚动条上的滚动滑块。样式 */
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.2);
+    }
+
+    /* 鼠标悬停时，设置滑块的背景颜色为深灰色 */
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #999999;
+    }
+
+    /* 鼠标按下时，设置滑块的背景颜色为灰色 */
+    ::-webkit-scrollbar-thumb:active {
+      background-color: #666666;
+    }
+  }
 </style>
 
 <body>
